; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_link_watch.c_linkwatch_init_dev.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_link_watch.c_linkwatch_init_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linkwatch_init_dev(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %3 = load %struct.net_device*, %struct.net_device** %2, align 8
  %4 = call i32 @netif_carrier_ok(%struct.net_device* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.net_device*, %struct.net_device** %2, align 8
  %8 = call i64 @netif_dormant(%struct.net_device* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6, %1
  %11 = load %struct.net_device*, %struct.net_device** %2, align 8
  %12 = call i32 @rfc2863_policy(%struct.net_device* %11)
  br label %13

13:                                               ; preds = %10, %6
  ret void
}

declare dso_local i32 @netif_carrier_ok(%struct.net_device*) #1

declare dso_local i64 @netif_dormant(%struct.net_device*) #1

declare dso_local i32 @rfc2863_policy(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
